assets/css/style.css
#map {
    height: 100vh;
    margin-left: 0px;
    margin-right: 0px;
    padding-bottom: 30px;
    float: left;
    z-index: 1;
}

.container {
    max-width: 100%;
    font-family: 'Work Sans', sans-serif;
}

h2 {
    text-align: center;
    margin-bottom: 0.5rem;
}
 
p {
    text-align: center;
    margin-bottom: 50px;
}

form {
    margin: 0 230px;
}

.form-group {
    width: 100%;
    padding-bottom: 12px;
}

.form-control {
    box-shadow: 1px 3px 10px rgb(59, 59, 59, 0.3);
    border: 0;
}

#search {
    padding-top: 10vh;
    box-shadow: -4px 4px 10px rgb(59, 59, 59, 0.3);
    z-index: 2;
}

.card-header {
    border: 0;
}

.card {
    margin-top: 80px;
    border: 0;
    box-shadow: 1px 3px 10px rgb(59, 59, 59, 0.3);
    margin-left: 50px;
    margin-right: 50px;
}

#submit {
    width: 100%;
    margin-top: 12px;
    box-shadow: 1px 3px 10px rgb(59, 59, 59, 0.3);
}

th {
    width: 44%;
}

th:last-child {
    width: 44%;
}

#favorite {
    float: right;
}

/* X-Small devices (portrait phones, less 576px) */
@media (max-width: 575px) {
    #map {
        height: 45vh;
    }

    form {
        margin: 0 30px;
    }

    #search {
        padding-top: 2vh;
    }

    h2 {
        margin-bottom: 0;
    }

    p {
        margin-bottom: 30px;
    }

    form {
        margin: 0 30px;
    }

    .form-group {
        text-align: center;
    }

    input {
        text-align: center;
    }
}
/* // Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) { 
    #map {
        height: 60vh;
    }

    form {
        margin: 0 30px;
    }

    #search {
        padding-top: 2vh;
    }

    h2 {
        margin-bottom: 0;
    }

    p {
        margin-bottom: 30px;
    }

    form {
        margin: 0 30px;
    }

    .form-group {
        text-align: center;
    }

    input {
        text-align: center;
    }
}

/* // Medium devices (tablets, 768px and up) */
@media (min-width: 768px) { 
    form {
        margin: 0 30px;
    }

    .card {
        margin-left: 30px;
        margin-right: 30px;
    }
}

/* // Large devices (desktops, 992px and up) */
@media (min-width: 992px) { 
    form {
        margin: 0 50px;
    }
}

/* // Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) { 
   
    form {
        margin: 0 70px;
    }

}

